kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carxpress-app1
  namespace: carxpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: carxpress-app1
  template:
    metadata:
      labels:
        app: carxpress-app1
    spec:
      containers:
        - name: carxpress-app1
          image: martina337/carxpress-app:2.0
          ports:
            - containerPort: 8080
