kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: carxpress-app-service
  namespace: carxpress
spec:
  selector:
    app: carxpress-app
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
