kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carxpress-app-ingress
  namespace: carxpress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: carxpress.com
    http:
      paths:
      - path: /vehicles
        pathType: Prefix
        backend:
          service:
            name: carxpress-app-service
            port:
              number: 8080
